Finished up cookie authentication

--- a/WebApplication/Web.config
+++ b/WebApplication/Web.config
@@ -9,6 +9,10 @@
         <add key="webpages:Enabled" value="false" />
         <add key="ClientValidationEnabled" value="true" />
         <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+        <add key="Authentication.Username" value="demo" />
+        <add key="Authentication.Password" value="documentdb" />
+        <add key="Authentication.AuthorizationCode" value="18" />
     </appSettings>
     <system.web>
         <authentication mode="None" />
